--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,4 @@
 (executable
  (public_name offcourse)
  (name main)
- (libraries  yojson uuidm core ppx_deriving_yojson.runtime)
- (preprocess (pps ppx_deriving_yojson)))
+ (libraries  yojson uuidm core))
